app/styles/_avatars.scss
@import './variables';

/* Variant Generator */
@mixin avatar-variants($avatars-config) {
    @each $size, $avatar in $avatars-config {
        .avatar--#{$size} {
            width: map-get($avatar, size);
            height: map-get($avatar, size);

            .avatar__icon {
                right: map-get($avatar, icon-right);
                bottom: map-get($avatar, icon-bottom);
            }

            .avatar__icon > *:first-child {
                font-size: map-get($avatar, icon-font-size);
            }

            .avatar__icon > * ~ * {
                font-size: map-get($avatar, icon-stack-ratio) * map-get($avatar, icon-font-size);

                &.avatar__icon--small {
                    font-size: map-get($avatar, icon-stack-ratio-small) * map-get($avatar, icon-font-size);
                }
            }

            .avatar__badge {
                right: map-get($avatar, badge-right);
                top: map-get($avatar, badge-top);

                @if map-has-key($avatar, badge-font-size) {
                    .badge,
                    .label {
                        font-size: map-get($avatar, badge-font-size);
                    }
                }
            }
        }
    }
}

/* Avatar Base */
.avatar {
    position: relative;
    display: inline-block;

    &__content {
        border-radius: 50%;
        width: 100%;
        height: 100%;
        overflow: hidden;
        position: relative;
        z-index: 0;
    }

    &__badge {
        position: absolute;
        display: block;
        transform: translate(50%, -50%);
        z-index: 1;
    }
    
    &__icon {
        position: absolute;
        display: block;
        transform: translate(50%, 50%);
        z-index: 1;
  
        &--stack {
            > .fa {
                display: block;
                
                ~ .fa {
                    position: absolute;
                    top: 50%;
                    left: 50%;
                    transform: translate(-50%, -50%);
                }
            }
        }
    }
}

@include avatar-variants($avatars);

